Adding CV to Inventory Report (#880)
Adding CV to Inventory Report

Reviewed-on: https://git.mmxlabs.com/LiNGO/LiNGO/pulls/880